[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/impact_imported.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Credits.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/logo.png" type="Texture" id=4]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.301961, 0.14902, 0.72549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="Sprite" parent="Control/Panel/VBoxContainer"]
position = Vector2( 199.753, 191.906 )
scale = Vector2( 0.53073, 0.53073 )
texture = ExtResource( 4 )

[node name="Title" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
visible = false
margin_top = 233.0
margin_right = 400.0
margin_bottom = 295.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] FIT SURVIVAL"
text = " FIT SURVIVAL"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 266.0
margin_right = 400.0
margin_bottom = 286.0
text = "START GAME"

[node name="Button2" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 290.0
margin_right = 400.0
margin_bottom = 310.0
text = "EXIT GAME"

[node name="Button3" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 314.0
margin_right = 400.0
margin_bottom = 334.0
text = "SHOW CREDITS"

[node name="Credits" parent="Control" instance=ExtResource( 3 )]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
